# hackathon_oslo

./: README.md  thirdparty.repos
bombs/: CMakeLists.txt  package.xml
bombs/include/bombs/: Bomb.hpp
bombs/meshes/: bomb.dae
bombs/src/: bombs_spawn.cpp
bombs/src/bombs/: Bomb.cpp
bombs_msgs/: CMakeLists.txt  package.xml
bombs_msgs/msg/: BombDetection.msg  OperateBomb.msg
scenario_maps/: CMakeLists.txt  Readme.md  package.xml
scenario_maps/behavior_tree_xml/: artificier_map_simple.xml  artificier_train_full.xml  void.xml
scenario_maps/config/: bombs_config_bookstore.yaml  bombs_config_hospital.yaml  bombs_config_house.yaml  bombs_config_warehouse.yaml  config_house.rviz  palete.groot.xml
scenario_maps/include/scenario_maps/: ApproachBomb.hpp  DeactivateBomb.hpp  IsBombDetected.hpp  IsBombNear.hpp  LookForBomb.hpp  Move.hpp
scenario_maps/include/scenario_maps/ctrl_support/: BTActionNode.hpp
scenario_maps/launch/: scenario_bookstore_bt.launch.py  scenario_hospital_bt.launch.py  scenario_house_bt.launch.py  scenario_train_bt.launch.py  scenario_warehouse_bt.launch.py
scenario_maps/src/: artificier.cpp  bombs_spawn_bookstore.cpp  bombs_spawn_hospital.cpp  bombs_spawn_house.cpp  bombs_spawn_warehouse.cpp
scenario_maps/src/scenario_maps/: ApproachBomb.cpp  DeactivateBomb.cpp  IsBombDetected.cpp  IsBombNear.cpp  LookForBomb.cpp  Move.cpp
scenario_train/: CMakeLists.txt  Readme.md  package.xml
scenario_train/config/: bombs_config.yaml  config.rviz
scenario_train/include/scenario_train/: Artificier.hpp
scenario_train/launch/: scenario_train.launch.py
scenario_train/src/: artificier.cpp  bombs_spawn.cpp
scenario_train/src/scenario_train/: Artificier.cpp
